src/less/portfolio.less
@import (reference) 'main.less';

@tile-size: 376px;

.portfolio-container {
    margin-left: -@gutter-size;
    text-align: center;
    cursor: pointer;
    > div {
        margin-left: @gutter-size;
        margin-bottom: @gutter-size;
        width: @tile-size;
        height: @tile-size;
        display: inline-block;
        max-width: ~"calc(100% - @{gutter-size})";

        perspective: 1000;

        .card-flip {
            position: relative;
            transform-style: preserve-3d;
            width: 100%;
            height: 100%;

            .transition-duration(@flip-duration);
            .front,
            .back {
                backface-visibility: hidden;
                position: absolute;
                top: 0;
                left: 0;
                width: 100%;
                height: 100%;
                background: @site-inverted-light;
            }
            .front {
                .center-content();
                .transform(rotateY(0deg));
                img {
                    max-width: 90%;
                    max-height: 90%;
                }
            }
            .back {
                padding: @gutter-size;
                text-align: left;
                color: @site-colour-dark;
                .logo-small {
                    text-align: center;
                    margin-bottom: @gutter-size;
                    img {
                        max-width: 100px;
                        max-height: 100px;
                    }
                }
                p, a {
                    color: @site-colour-dark;
                    font-size: @font-size-medium;
                }
                .transform(rotateY(180deg));

                @media screen and (max-width: @breakpoint-mobile) {
                    overflow: scroll;
                }
            }
        }
        &:hover,
        &.selected {
            .card-flip {
                .transform(rotateY(180deg));
            }
        }
        &.selected {
            border: 2px solid fadeout(@site-highlight-colour, 55%);
            .transition-property(border);
            .transition-delay(@flip-duration);
            .transition-duration(0s);
            .back {
                padding: @gutter-size - 2px;
                .transition-property(padding);
                .transition-delay(@flip-duration);
                .transition-duration(0s);
            }
        }
    }
}

